 2012-04-20 20:03  hvlad 
   M src/jrd/jrd.cpp
Fixed bug CORE-3825 : If an autocommit transaction (i.e. transaction started with isc_tpb_autocommit option) run DDL using EXECUTE STATEMENT it will produce a bugcheck 287 (Too many savepoints) 

 2012-04-19 05:14  alexpeshkoff 
   M src/remote/inet.cpp
fixed posix build

 2012-04-16 15:17  hvlad 
   M src/remote/inet.cpp
Fixed bug CORE-3819 : Wrong service name to port address resolution in database connection string

 2012-04-13 09:11  dimitr 
   M src/dsql/ExprNodes.cpp
Additional fix for CORE-3807. Otherwise, _utf8 'A' is considered equal to _win1251 'ABCD' etc. The original code didn't check for charsets/collations but IMHO this was wrong.

 2012-04-12 13:03  hvlad 
   M src/jrd/cmp.cpp
   M src/jrd/dfw.epp
   M src/jrd/jrd.cpp
   M src/jrd/jrd.h
   M src/jrd/met.epp
Front ported fix for bug CORE-3812 : Connection lost to database during massive dropping and altering primary keys of tables

 2012-04-12 12:50  hvlad 
   M src/dsql/ExprNodes.cpp
Allow DEBUG build to work with pre-FB3 BLR code.
For example, it is impossible to restore database and to run script from CORE-3812.
Thanks to Dmitry for explanation.

 2012-04-12 12:32  hvlad 
   M src/jrd/dfw.epp
Fixed wrong pool usage

 2012-04-12 09:02  robocop 
   M src/dsql/AggNodes.cpp
   M src/dsql/BoolNodes.cpp
   M src/dsql/DsqlCompilerScratch.h
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/dsql/Nodes.h
   M src/dsql/StmtNodes.cpp
   M src/dsql/StmtNodes.h
   M src/dsql/Visitors.h
   M src/dsql/dsql.cpp
   M src/dsql/dsql.h
   M src/dsql/gen.cpp
   M src/include/fb_types.h
   M src/jrd/Database.h
   M src/jrd/DatabaseSnapshot.cpp
   M src/jrd/DatabaseSnapshot.h
   M src/jrd/Function.epp
   M src/jrd/JrdStatement.cpp
   M src/jrd/JrdStatement.h
   M src/jrd/Optimizer.cpp
   M src/jrd/Optimizer.h
   M src/jrd/RecordSourceNodes.cpp
   M src/jrd/RecordSourceNodes.h
   M src/jrd/UserManagement.h
   M src/jrd/blb.cpp
   M src/jrd/blr.h